fix: spell sync + refactor of Open5e client code